@@ -2758,7 +2758,7 @@ error:
 	if (NULL != out)
 		zbx_free(out);
 
-	zabbix_log(LOG_LEVEL_WARNING, "%s", error);
+	zabbix_log(LOG_LEVEL_DEBUG, "%s", error);
 	zabbix_syslog("%s", error);
 
 	return FAIL;
@@ -2808,9 +2808,9 @@ int	evaluate_expression(int *result, char **expression, time_t now,
 	{
 		/* Evaluate expression */
 		zbx_remove_spaces(*expression);
-		if (substitute_functions(expression, now, error, maxerrlen) == SUCCEED)
+		if (SUCCEED == substitute_functions(expression, now, error, maxerrlen))
 		{
-			if (evaluate(&value, *expression, error, maxerrlen) == SUCCEED)
+			if (SUCCEED == evaluate(&value, *expression, error, maxerrlen))
 			{
 				if (0 == cmp_double(value, 0))
 					*result = TRIGGER_VALUE_FALSE;
